# ytool

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  YTool.bat  YTool.command  app.py  config.py  pyproject.toml
routers/: __init__.py  config.py  downloader.py  subscriptions.py
services/: __init__.py  history_service.py  youtube_auth.py  ytdlp_service.py
static/: app.js  index.html  style.css
ytool-mac/: .gitignore  AppIcon.icns  Package.swift  README.md  build.sh
ytool-mac/YToolMac/: ContentView.swift  DownloadManager.swift  DownloadsView.swift  VideoInfoService.swift  YToolMacApp.swift
ytool-mac/YToolMac.app/Contents/: Info.plist
ytool-mac/YToolMac.app/Contents/MacOS/: YToolMac
